# gencitations

./: README.md  pyproject.toml
gencitations/: dois.yaml  main.py
tests/: 03_rimp2_jk_orca5.out
