[tool.poetry]
name = "gencitations"
version = "0.1.0"
description = "Painless bibtex generator for ORCA logfiles."
authors = ["Johannes Steinmetzer <josteinm@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
diskcache = "^5.2.1"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gencitations = "gencitations.main:run"
